# bitrix_integration

./: Dockerfile  README.md  pyproject.toml  requirements.txt  user.csv
.astro/: config.yaml
dags/: main.py
include/src/data/: bitrix_collector.py
include/src/database/: db_connection.py  db_model.py
src/data/: bitrix_collector.py
